@@ -12,7 +12,6 @@ set (FRAMEWORK_INCLUDES
     mpse.h
     parameter.h
     plug_data.h
-    range.h
     share.h
     so_rule.h
     value.h
@@ -26,7 +25,6 @@ add_library ( framework STATIC
     parameter.cc
     module.cc
     mpse.cc
-    range.cc
     value.cc
 )
 
