@@ -16,7 +16,6 @@ module.h \
 mpse.h \
 parameter.h \
 plug_data.h \
-range.h \
 share.h \
 so_rule.h \
 value.h
@@ -28,7 +27,6 @@ ips_option.cc \
 parameter.cc \
 module.cc \
 mpse.cc \
-range.cc \
 value.cc
 
 AM_CXXFLAGS = @AM_CXXFLAGS@
