@@ -7,6 +7,7 @@
 -- changed stream tcp to use StreamSplitter::reassemble() instead of
     direct memcpy()
 -- several new Xcode warnings cleaned up (mostly unused funcs)
+-- fixed dynamic build of ips options
 
 106
 -- converted fpdetect.cc to pull fast pattern buffers from inspector gadget
